# SD-Auto-Prompt-Optimizer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ObsidianMD/: development_plan.md  main_idea.md  scheme.canvas
ObsidianMD/.obsidian/: workspace.json
examples/: config.yaml
src/sdopt/cli/: main.py
src/sdopt/core/: __init__.py  config.py  evaluation.py  evolution.py  generators.py  llm.py  models.py  persistence.py  setup.py  simulator.py
src/sdopt/web/: server.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  ErrorBoundary.tsx  main.tsx
ui/src/components/: PromptDetail.tsx  RunDetail.tsx  RunList.tsx
